--- a/public/index.html
+++ b/public/index.html
@@ -150,13 +150,13 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2023.7.11</h4>
+            <h4 class="info-date">2023.10.14</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <a href="#result_2">U8 (2年生)</a><br>
-              第40回川崎市低学年サッカー大会 にて 準優勝 となりました。<br>
+            <a href="#result_5">U-11 (5年生)</a><br>
+            <a href="https://kawasaki-fa.com/u12/2023_hungary_20231014_01/" target="_blank">ハンガリー大使館杯 U-11川崎市秋季サッカー大会2023 にて 3位</a> となりました。<br>
             <br>たくさんの応援、誠にありがとうございました。
-            <br>(当日の様子は <a href="https://www.instagram.com/p/Cuea2K1Bepv/?igshid=MzRlODBiNWFlZA%3D%3D"
+            <br>(当日の様子は <a href="https://www.instagram.com/p/CyanhrJyFS7/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
               target="_blank">FC中原 Instagram</a> でもご紹介しています)
 
           </div>
