ナビゲーションを修正

--- a/public/index_a.html
+++ b/public/index_a.html
@@ -73,7 +73,7 @@
                 <li class="has-children">
                   <a href="#team-info" class="nav-link">チーム</a>
                   <ul class="dropdown">
-                    <li><a href="#team-concepts" class="nav-link">FC中原とは</a></li>
+                    <li><a href="#team-concepts" class="nav-link">FC中原 クラブ方針</a></li>
                     <li><a href="#team-description" class="nav-link">活動内容</a></li>
                     <li><a href="#team-schedule" class="nav-link">スケジュール</a></li>
                   </ul>
