--- a/public/index.html
+++ b/public/index.html
@@ -440,7 +440,7 @@
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>- [2023.02.04] 第14回川崎ケーブルテレビ杯新人戦 ベスト8</li>
-                  <li>- [2022.10.30] Hungry U-11川崎市サッカー大会2022 ５年生大会 3位</li>
+                  <li>- [2022.10.30] Hungry U-11 サッカー大会2022 ５年生大会 3位</li>
                   <li>- [2022.06.26] 第34回八王子いちょう杯 ５年生大会 準優勝</li>
                   <li>- [2021.07.03] かわしん杯(ブルー･ホワイト) ベスト16</li>
                   <li>- [2021.05.16] 第88回湘南チャレンジ杯（Bチーム）優勝</li>
