--- a/public/index_a.html
+++ b/public/index_a.html
@@ -171,7 +171,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center" data-aos="fade">
-          <h1 class="section-title mb-0">FC中原 クラブ方針</h1>
+          <h1 class="section-title mb-0">クラブ方針</h1>
         </div>
       </div>
       <div class="row">
@@ -239,14 +239,14 @@
               <ol>(6) 原理原則を踏まえたインテリジェンスを養うトレーニング</ol>
               <ul><br></ul>
               <li>各カテゴリー別トレーニング目標</li>
-              <ul>U6: <br>
-                ◯様々な運動を楽しみながら運動能力を養う(コーディネーション) ◯ボールに慣れる(ボールフィーリング) </ul>
-              <ul>U8: <br>
-                ◯基本スキルの育成 ◯対人スキル(1対1)の育成 ◯個人戦術の基礎的な内容 ◯ドリブル強化 ◯ボールに速く寄る、強いプレス、連続・継続性(ハイインテンシティ)</ul>
-              <ul>U10: <br>
-                ◯対人スキル(1対1)、個人戦術の向上 ◯グループ戦術の基礎的な内容(2対1以上) (◯ハイインテンシティ)</ul>
-              <ul>U12: <br>
-                ◯対人スキル、個人戦術、グループ戦術(2対2以上)の向上 ◯フィジカル強化(トップチープ選手) (◯ハイインテンシティ)</ul>
+              <ol><b>U6: </b><br>
+                ◯様々な運動を楽しみながら運動能力を養う(コーディネーション) ◯ボールに慣れる(ボールフィーリング) </ol>
+              <ol><b>U8: </b><br>
+                ◯基本スキルの育成 ◯対人スキル(1対1)の育成 ◯個人戦術の基礎的な内容 ◯ドリブル強化 ◯ボールに速く寄る、強いプレス、連続・継続性(ハイインテンシティ)</ol>
+              <ol><b>U10: </b><br>
+                ◯対人スキル(1対1)、個人戦術の向上 ◯グループ戦術の基礎的な内容(2対1以上) (◯ハイインテンシティ)</ol>
+              <ol><b>U12: </b><br>
+                ◯対人スキル、個人戦術、グループ戦術(2対2以上)の向上 ◯フィジカル強化(トップチープ選手) (◯ハイインテンシティ)</ol>
             </ul>
           </div>
         </div>
