--- a/public/index_b.html
+++ b/public/index_b.html
@@ -73,7 +73,7 @@
                 <li class="has-children">
                   <a href="#team-info" class="nav-link">チーム</a>
                   <ul class="dropdown">
-                    <li><a href="#team-concepts" class="nav-link">FC中原とは</a></li>
+                    <li><a href="#team-concepts" class="nav-link">クラブ方針</a></li>
                     <li><a href="#team-description" class="nav-link">活動内容</a></li>
                     <li><a href="#team-schedule" class="nav-link">スケジュール</a></li>
                   </ul>
@@ -171,27 +171,36 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center" data-aos="fade">
-          <h1 class="section-title mb-0">FC中原とは</h1>
+          <h1 class="section-title mb-0">クラブ方針</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-          <figure class="circle-bg">
-            <img src="images/members.jpg" alt="Image" class="img-fluid">
-          </figure>
+          <div class="mb-4">
+            <h3 class="h3 mb-4 text-black">ミッション</h3>
+            <ul class="list-unstyled ul-check success">
+              <li>地域のサッカークラブとして</li>
+              <ul>「サッカーの楽しさ、素晴らしさを伝える」</ul>
+              <ul>「サッカーを通じて人を育てる」</ul>
+            </ul>
+            <p><a
+              href="policy.pdf"
+              class="smoothscroll btn btn-primary" target="_blank">活動方針 詳細</a></p>
+          </div>
         </div>
         <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
           <div class="mb-4">
-            <h3 class="h3 mb-4 text-black">私たちが大切にしていること</h3>
+            <h3 class="h3 mb-4 text-black">ビジョン</h3>
             <ul class="list-unstyled ul-check success">
-              <li>成長期における、基礎運動能力の向上</li>
-              <li>健全なスポーツ精神、社会的態度の育成</li>
-              <li>スポーツの楽しさを体感</li>
-              <li>その他、サッカーを通して子供の成長に寄与すること</li>
+              <li>サッカー選手としての育成<br>
+                次のステージでのサッカーに繋がる、通用する選手</li>
+              <li>社会で必要とされる積極性や粘り強さ、仲間を思いやる気持ち、リーダーシップやモチベーションの高さなどの非認知能力(※)を高める</li>
+              <li>勝利と育成の両立</li>
             </ul>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
