--- a/public/index_c.html
+++ b/public/index_c.html
@@ -73,9 +73,11 @@
                 <li class="has-children">
                   <a href="#team-info" class="nav-link">チーム</a>
                   <ul class="dropdown">
-                    <li><a href="#team-concepts" class="nav-link">FC中原とは</a></li>
+                    <li><a href="#team-concepts" class="nav-link">クラブ方針</a></li>
                     <li><a href="#team-description" class="nav-link">活動内容</a></li>
                     <li><a href="#team-schedule" class="nav-link">スケジュール</a></li>
+                    <li><a href="#team-training-policy" class="nav-link">指導方針</a></li>
+                    <li><a href="#team-training-goal" class="nav-link">トレーニング目標</a></li>
                   </ul>
                 </li>
 
@@ -171,27 +173,36 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center" data-aos="fade">
-          <h1 class="section-title mb-0">FC中原とは</h1>
+          <h1 class="section-title mb-0">クラブ方針</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-          <figure class="circle-bg">
-            <img src="images/members.jpg" alt="Image" class="img-fluid">
-          </figure>
+          <div class="mb-4">
+            <h3 class="h3 mb-4 text-black">ミッション</h3>
+            <ul class="list-unstyled ul-check success">
+              <li>地域のサッカークラブとして</li>
+              <ul>「サッカーの楽しさ、素晴らしさを伝える」</ul>
+              <ul>「サッカーを通じて人を育てる」</ul>
+            </ul>
+            <p><a
+              href="policy.pdf"
+              class="smoothscroll btn btn-primary" target="_blank">活動方針 詳細</a></p>
+          </div>
         </div>
         <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
           <div class="mb-4">
-            <h3 class="h3 mb-4 text-black">私たちが大切にしていること</h3>
+            <h3 class="h3 mb-4 text-black">ビジョン</h3>
             <ul class="list-unstyled ul-check success">
-              <li>成長期における、基礎運動能力の向上</li>
-              <li>健全なスポーツ精神、社会的態度の育成</li>
-              <li>スポーツの楽しさを体感</li>
-              <li>その他、サッカーを通して子供の成長に寄与すること</li>
+              <li>サッカー選手としての育成<br>
+                次のステージでのサッカーに繋がる、通用する選手</li>
+              <li>社会で必要とされる積極性や粘り強さ、仲間を思いやる気持ち、リーダーシップやモチベーションの高さなどの非認知能力(※)を高める</li>
+              <li>勝利と育成の両立</li>
             </ul>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
@@ -764,6 +775,93 @@
     </div>
   </section>
 
+  <!-- 指導方針 -->
+  <div class="site-section cta-big-image" id="team-training-policy">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-12 text-center" data-aos="fade">
+          <h1 class="section-title mb-0">指導方針</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-11 mb-auto" data-aos="fade-up" data-aos-delay="">
+          <div class="mb-4">
+            <h3 class="h3 mb-4 text-black">競技として</h3>
+            <ul class="list-unstyled ul-check success">
+              <li>勝つために必要な技術、戦術、フィジカル、メンタル、コミュニケーション力などを
+              高める指導をし、子供たちの「勝ちたい」を引き出す<br>
+              ただし、結果にこだわったうえでのプロセスや気持ちを重要視する。</li>
+              <li>次の年代に繋がるベースとして、技術、インテリジェンス、試合に向けた準備などを指導する</li>
+              <li>戦える集団であるために選手1人1人が常に勝負にこだわり、“戦う強い気持ち”を持つ</li>
+              <li>チームが勝つために何をすべきか自ら考え、全力を尽くして行動する選手を育成する</li>
+              <li>様々な局面(”認知”、”分析”)でより良い判断をくだし、
+              適切なタイミングで”実行”できるインテリジェンスを養う</li>
+              <li>その上で失敗を恐れずに「チャレンジ」し続けるマインドを養う</li>
+              <li>自立心を育むため、自分でできることは自分でやるよう促す</li>
+              <li>指導者も常に指導法をアップデートし学ぶ姿勢を持ち続ける</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-11 mb-auto" data-aos="fade-up" data-aos-delay="">
+          <div class="mb-4">
+            <h3 class="h3 mb-4 text-black">楽しみとして</h3>
+            <ul class="list-unstyled ul-check success">
+              <li>大前提として、サッカーの楽しさ、素晴らしさを伝える</li>
+              <li>子供たち、保護者、コーチ含めた皆が楽しむ場とし、積極的な挨拶や声掛けの中から、勝つ楽しさ以外にも遊ぶ楽しさを感じてもらう</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- トレーニング目標 -->
+  <div class="site-section cta-big-image" id="team-training-goal">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-12 text-center" data-aos="fade">
+          <h1 class="section-title mb-0">トレーニング目標</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-11 mb-auto" data-aos="fade-up" data-aos-delay="">
+          <div class="mb-4">
+            <h3 class="h3 mb-4 text-black">全カテゴリー共通</h3>
+            <ol>
+              <li>1選手1人1人とコミュニケーションをとり楽しめる環境づくり</li>
+              <li>サッカーを通しての人間性の教育的指導</li>
+              <li>基本スキル(テクニックアクション)の育成</li>
+              <li>4つの技術の質の向上=運ぶ、 飛ばす、受ける、奪うの質の追求</li>
+              <li>判断を伴ったトレーニング</li>
+              <li>原理原則を踏まえたインテリジェンスを養うトレーニング</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-11 mb-auto" data-aos="fade-up" data-aos-delay="">
+          <div class="mb-4">
+            <h3 class="h3 mb-4 text-black">カテゴリー別</h3>
+            <ul class="list-unstyled ul-check success">
+              <li><b>U6: </b><br>
+                ◯様々な運動を楽しみながら運動能力を養う(コーディネーション) ◯ボールに慣れる(ボールフィーリング) </li>
+              <li><b>U8: </b><br>
+                ◯基本スキルの育成 ◯対人スキル(1対1)の育成 ◯個人戦術の基礎的な内容 ◯ドリブル強化 ◯ボールに速く寄る、強いプレス、連続・継続性(ハイインテンシティ)</li>
+              <li><b>U10: </b><br>
+                ◯対人スキル(1対1)、個人戦術の向上 ◯グループ戦術の基礎的な内容(2対1以上) (◯ハイインテンシティ)</li>
+              <li><b>U12: </b><br>
+                ◯対人スキル、個人戦術、グループ戦術(2対2以上)の向上 ◯フィジカル強化(トップチープ選手) (◯ハイインテンシティ)</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
 
   <!-- SNS -->
   <section class="site-section border-bottom" id="team-result">
