スケジュールをキッズのみ公開とするため、お知らせと 11月分を掲載

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                   <ul class="dropdown">
                     <li><a href="#team-concepts" class="nav-link">FC中原とは</a></li>
                     <li><a href="#team-description" class="nav-link">活動内容</a></li>
-                    <li><a href="#team-schedule" class="nav-link">スケジュール</a></li>
+                    <li><a href="#team-schedule" class="nav-link">スケジュール(キッズ)</a></li>
                   </ul>
                 </li>
 
@@ -150,6 +150,14 @@
         <div class="row justify-content-center">
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2023.10.27</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            1～6年生、および、少女(レジーナ) のスケジュールは非公開とさせていただきます。<br>
+            スケジュールを確認されたい場合は、担当コーチまでご連絡ください。
+          </div>
+
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2023.10.14</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
@@ -158,7 +166,6 @@
             <br>たくさんの応援、誠にありがとうございました。
             <br>(当日の様子は <a href="https://www.instagram.com/p/CyanhrJyFS7/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
               target="_blank">FC中原 Instagram</a> でもご紹介しています)
-
           </div>
         </div>
       </div>
@@ -278,21 +285,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center" data-aos="fade">
-          <h1 class="section-title mb-0">スケジュール</h1>
-        </div>
-      </div>
-
-      <div class="row justify-content-center">
-        <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-          <h3 class="schedule-month">2023年 09月</h3>
-        </div>
-        <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-          <div class="btn-group" role="group" aria-label="Schedule Contents">
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1783058353&single=true"
-            role="button" class="btn btn-outline-primary" target="_blank">html版</a>
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1783058353&single=true&output=pdf"
-            role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
-          </div>
+          <h1 class="section-title mb-0">スケジュール(キッズ)</h1>
         </div>
       </div>
 
@@ -305,6 +298,20 @@
             <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1618684395&single=true"
             role="button" class="btn btn-outline-primary" target="_blank">html版</a>
             <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1618684395&single=true&output=pdf"
+            role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+          <h3 class="schedule-month">2023年 11月</h3>
+        </div>
+        <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+          <div class="btn-group" role="group" aria-label="Schedule Contents">
+            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSDTZlz7wqBm0UXjB1eTleACHs9OUkZ1qhhlvQcfcZlYtjWPNA51M0GL7cPzK5NdlP27qd1j173Ed2R/pubhtml?gid=615464136&single=true"
+            role="button" class="btn btn-outline-primary" target="_blank">html版</a>
+            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSDTZlz7wqBm0UXjB1eTleACHs9OUkZ1qhhlvQcfcZlYtjWPNA51M0GL7cPzK5NdlP27qd1j173Ed2R/pub?gid=615464136&single=true&output=pdf"
             role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
           </div>
         </div>
