案C について指摘を修正。PDFへのリンクもGドライブに変更

--- a/public/index_c.html
+++ b/public/index_c.html
@@ -186,7 +186,7 @@
               <ul>「サッカーを通じて人を育てる」</ul>
             </ul>
             <p><a
-              href="policy.pdf"
+              href="https://drive.google.com/file/d/1QPI0gvrupNmD_CZQGoTuopTwYWts8EA_/view?usp=sharing"
               class="smoothscroll btn btn-primary" target="_blank">活動方針 詳細</a></p>
           </div>
         </div>
@@ -196,7 +196,7 @@
             <ul class="list-unstyled ul-check success">
               <li>サッカー選手としての育成<br>
                 次のステージでのサッカーに繋がる、通用する選手</li>
-              <li>社会で必要とされる積極性や粘り強さ、仲間を思いやる気持ち、リーダーシップやモチベーションの高さなどの非認知能力(※)を高める</li>
+              <li>社会で必要とされる積極性や粘り強さ、仲間を思いやる気持ち、リーダーシップやモチベーションの高さなどの非認知能力を高める</li>
               <li>勝利と育成の両立</li>
             </ul>
           </div>
@@ -794,7 +794,7 @@
               <li>次の年代に繋がるベースとして、技術、インテリジェンス、試合に向けた準備などを指導する</li>
               <li>戦える集団であるために選手1人1人が常に勝負にこだわり、“戦う強い気持ち”を持つ</li>
               <li>チームが勝つために何をすべきか自ら考え、全力を尽くして行動する選手を育成する</li>
-              <li>様々な局面(”認知”、”分析”)でより良い判断をくだし、
+              <li>様々な局面(”認知”、”分析”)でより良い "判断" をくだし、
               適切なタイミングで”実行”できるインテリジェンスを養う</li>
               <li>その上で失敗を恐れずに「チャレンジ」し続けるマインドを養う</li>
               <li>自立心を育むため、自分でできることは自分でやるよう促す</li>
@@ -847,13 +847,22 @@
             <h3 class="h3 mb-4 text-black">カテゴリー別</h3>
             <ul class="list-unstyled ul-check success">
               <li><b>U6: </b><br>
-                ◯様々な運動を楽しみながら運動能力を養う(コーディネーション) ◯ボールに慣れる(ボールフィーリング) </li>
+                ◯様々な運動を楽しみながら運動能力を養う(コーディネーション)<br>
+                ◯ボールに慣れる(ボールフィーリング)</li>
               <li><b>U8: </b><br>
-                ◯基本スキルの育成 ◯対人スキル(1対1)の育成 ◯個人戦術の基礎的な内容 ◯ドリブル強化 ◯ボールに速く寄る、強いプレス、連続・継続性(ハイインテンシティ)</li>
+                ◯基本スキルの育成<br>
+                ◯対人スキル(1対1)の育成<br>
+                ◯個人戦術の基礎的な内容<br>
+                ◯ドリブル強化<br>
+                ◯ボールに速く寄る、強いプレス、連続・継続性(ハイインテンシティ)</li>
               <li><b>U10: </b><br>
-                ◯対人スキル(1対1)、個人戦術の向上 ◯グループ戦術の基礎的な内容(2対1以上) (◯ハイインテンシティ)</li>
+                ◯対人スキル(1対1)、個人戦術の向上<br>
+                ◯グループ戦術の基礎的な内容(2対1以上)<br>
+                (◯ハイインテンシティ)</li>
               <li><b>U12: </b><br>
-                ◯対人スキル、個人戦術、グループ戦術(2対2以上)の向上 ◯フィジカル強化(トップチープ選手) (◯ハイインテンシティ)</li>
+                ◯対人スキル、個人戦術、グループ戦術(2対2以上)の向上<br>
+                ◯フィジカル強化(トップチーム選手)<br>
+                (◯ハイインテンシティ)</li>
             </ul>
           </div>
         </div>
