スペースを調整

--- a/public/index_c.html
+++ b/public/index_c.html
@@ -792,10 +792,10 @@
               高める指導をし、子供たちの「勝ちたい」を引き出す<br>
               ただし、結果にこだわったうえでのプロセスや気持ちを重要視する。</li>
               <li>次の年代に繋がるベースとして、技術、インテリジェンス、試合に向けた準備などを指導する</li>
-              <li>戦える集団であるために選手1人1人が常に勝負にこだわり、“戦う強い気持ち”を持つ</li>
+              <li>戦える集団であるために選手1人1人が常に勝負にこだわり、“戦う強い気持ち” を持つ</li>
               <li>チームが勝つために何をすべきか自ら考え、全力を尽くして行動する選手を育成する</li>
               <li>様々な局面(”認知”、”分析”)でより良い "判断" をくだし、
-              適切なタイミングで”実行”できるインテリジェンスを養う</li>
+              適切なタイミングで ”実行” できるインテリジェンスを養う</li>
               <li>その上で失敗を恐れずに「チャレンジ」し続けるマインドを養う</li>
               <li>自立心を育むため、自分でできることは自分でやるよう促す</li>
               <li>指導者も常に指導法をアップデートし学ぶ姿勢を持ち続ける</li>
@@ -833,7 +833,7 @@
               <li>1選手1人1人とコミュニケーションをとり楽しめる環境づくり</li>
               <li>サッカーを通しての人間性の教育的指導</li>
               <li>基本スキル(テクニックアクション)の育成</li>
-              <li>4つの技術の質の向上=運ぶ、 飛ばす、受ける、奪うの質の追求</li>
+              <li>4つの技術の質の向上＝運ぶ、 飛ばす、受ける、奪うの質の追求</li>
               <li>判断を伴ったトレーニング</li>
               <li>原理原則を踏まえたインテリジェンスを養うトレーニング</li>
             </ol>
