--- a/public/index.html
+++ b/public/index.html
@@ -625,6 +625,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2023.12.16] U-9川崎市秋季サッカー大会2023 ベスト8</li>
                   <li>- [2023.02.18] SAGAWA CUP 2022/23 U-8　準優勝</li>
                   <li>- [2023.01.15] 立川FC AZZURROカップ　準優勝</li>
                   <li>- [2022.12.18] メリオールカップ　優勝</li>
@@ -649,7 +650,7 @@
                   <button type="button" class="btn btn-secondary">2025年</button>
                   <button type="button" class="btn btn-secondary">2024年</button>
                   <a class="btn btn-primary"
-                    href="https://drive.google.com/file/d/1CBY-ma1xiKDvmYONO8S8_igmRc4VAVKb/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1TypqYSeMD4DX8oqWftm-adQ8lXzL9rKQ/view?usp=sharing"
                     role="button" target="_blank">2023年</a>
                   <a class="btn btn-primary"
                     href="https://drive.google.com/file/d/1ZEfCIe-zl75vhNqaB_Z-J21-o5h28t4Y/view?usp=share_link"
