--- a/public/index.html
+++ b/public/index.html
@@ -625,6 +625,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.01.20] FCレガーレわくわくカップ U9　優勝</li>
                   <li>- [2023.12.16] U-9川崎市秋季サッカー大会2023 ベスト8</li>
                   <li>- [2023.02.18] SAGAWA CUP 2022/23 U-8　準優勝</li>
                   <li>- [2023.01.15] 立川FC AZZURROカップ　準優勝</li>
