--- a/public/index.html
+++ b/public/index.html
@@ -678,6 +678,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.01.06-08] U-8 MAMEDO FC CUP 2024(波崎) 準優勝</li>
+                  <li>- [2023.12.16] FCレガーレ ワクワクカップウィンターU8 優勝</li>
                   <li>- [2023.11.11] 第42回 子どもの国サッカー大会(低学年の部) 第3位</li>
                   <li>- [2023.09.23] 第189回湘南チャレンジ杯 U8大会 優勝</li>
                   <li>- [2023.09.17] Future Star CUP - 2023 Autumn Series U8大会 優勝</li>
