--- a/public/index.html
+++ b/public/index.html
@@ -731,6 +731,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.01.28] U-7 ATHLEAD CHALLENGE LEAGUE 準優勝</li>
+                  <li>- [2024.01.27] U-7 さぎぬまSC杯 優勝</li>
                   <li>- [2023.07.17] U-7 ラゾクラック杯 優勝</li>
                   <li>- [2023.06.11] U-7 LHQ杯 優勝</li>
                 </ul>
