--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,12 @@
         </div>
 
         <div class="row justify-content-center">
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2024.04.07</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            新年度(2024年度) に対応いたしました。
+          </div>
 
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2023.12.03</h4>
@@ -158,15 +164,6 @@
             クラブ方針、指導方針、および、トレーニング目標を公開しました。<br>
             今後とも、FC中原をよろしくお願いいたします。
           </div>
-
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2023.10.27</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            1～6年生、および、少女(レジーナ) のスケジュールは非公開とさせていただきます。<br>
-            スケジュールを確認されたい場合は、担当コーチまでご連絡ください。
-          </div>
-
         </div>
       </div>
 
@@ -450,66 +447,6 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2011_20201103_2.jpg" alt="Image" class="img-fluid team-photo">
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>- [2023.02.04] 第14回川崎ケーブルテレビ杯新人戦 ベスト8</li>
-                  <li>- [2022.10.30] Hungry U-11 サッカー大会2022 ５年生大会 3位</li>
-                  <li>- [2022.06.26] 第34回八王子いちょう杯 ５年生大会 準優勝</li>
-                  <li>- [2021.07.03] かわしん杯(ブルー･ホワイト) ベスト16</li>
-                  <li>- [2021.05.16] 第88回湘南チャレンジ杯（Bチーム）優勝</li>
-                  <li>- [2021.05.04] 全力中原区祭 準優勝</li>
-                  <li>- [2021.04.04] YSgem Junior CUP 4位</li>
-                  <li>- [2021.03.07] RANTEC CUP U-9 準優勝</li>
-                  <li>- [2020.12.27] 入二杯 準優勝</li>
-                  <li>- [2020.11.15] Ｎリーグ（Ｂリーグ） 優勝</li>
-                  <li>- [2020.02.24] フロンタウンカップ 3位</li>
-                  <li>- [2020.02.24] ラゾラック杯 4位</li>
-                  <li>- [2020.02.02] ルベントカップ 優勝</li>
-                  <li>- [2019.10.14] ラゾラック杯 4位</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="card-footer">
-            <div class="row justify-content-center">
-              <div class="col-lg-3 col-md-5 card-footer-title">
-                各年度の試合結果
-              </div>
-              <div class="col-lg-6 col-md-7">
-                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/1faw87UJQPh72PVjeBM52llQLqpNwTyZzStgH3qCyG28/edit#gid=0"
-                    role="button" target="_blanky">2023年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/1-PXnOeXrF0WuhOGsP3M9n0qnupoomRqY-fNdnYK7nJ4/edit#gid=0"
-                    role="button" target="_blanky">2022年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/1k7ckDCcMAykJLQSnBba0FXeWhnazfNLHXqesx3BiuTU/edit#gid=0"
-                    role="button" target="_blanky">2021年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/1u3rOUtOvQt5aXn541v-mOAAOFeBSqjQAiVtfp30ZRBg/edit#gid=0"
-                    role="button" target="_blank">2020年</a>
-                  <a class="btn btn-primary"
-                    href="https://docs.google.com/spreadsheets/d/1WOcu2mdtipN53rUwWXSZ_Kf_cNAbVxAik8y1pJ7KEIQ/edit#gid=0"
-                    role="button" target="_blank">2019年</a>
-                  <a class="btn btn-primary" href="result/fc2011/result1.htm" role="button" target="_blank">2018年</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card-result" id="result_5">
-        <div class="card mb-4 shadow-sm" data-aos="fade-up">
-          <div class="card-header">
-            <h3>5年生</h3>
-          </div>
-          <div class="card-body text-primary">
-            <div class="row justify-content-center">
-              <div class="col-lg-6 col-md-5 team-photo-box">
                 <img src="images/fc2012_20201025.jpg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
@@ -559,10 +496,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_4">
+      <div class="card-result" id="result_5">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>4年生</h3>
+            <h3>5年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -614,10 +551,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_3">
+      <div class="card-result" id="result_4">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>3年生</h3>
+            <h3>4年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -668,10 +605,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_2">
+      <div class="card-result" id="result_3">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>2年生</h3>
+            <h3>3年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -723,10 +660,10 @@
         </div>
       </div>
 
-      <div class="card-result" id="result_1">
+      <div class="card-result" id="result_2">
         <div class="card mb-4 shadow-sm" data-aos="fade-up">
           <div class="card-header">
-            <h3>1年生</h3>
+            <h3>2年生</h3>
           </div>
           <div class="card-body text-primary">
             <div class="row justify-content-center">
@@ -758,6 +695,43 @@
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vT90a-fI6P6ZAiRQ2IhLT5HAfP2hsmKp3l1iEU7WbxHhP--7uFWRDIUeLn5WuXgpJr8RMFGl8bf8C_4/pubhtml?gid=0&single=true"
                     role="button" target="_blank">2023年</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-result" id="result_1">
+        <div class="card mb-4 shadow-sm" data-aos="fade-up">
+          <div class="card-header">
+            <h3>1年生</h3>
+          </div>
+          <div class="card-body text-primary">
+            <div class="row justify-content-center">
+              <div class="col-lg-6 col-md-5 team-photo-box">
+                <!--<img src="images/" alt="Image" class="img-fluid team-photo">-->
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>- </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="row justify-content-center">
+              <div class="col-lg-3 col-md-5 card-footer-title">
+                各年度の試合結果
+              </div>
+              <div class="col-lg-6 col-md-7">
+                <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
+                  <button type="button" class="btn btn-secondary">2029年</button>
+                  <button type="button" class="btn btn-secondary">2028年</button>
+                  <button type="button" class="btn btn-secondary">2027年</button>
+                  <button type="button" class="btn btn-secondary">2026年</button>
+                  <button type="button" class="btn btn-secondary">2025年</button>
+                  <button type="button" class="btn btn-secondary">2024年</button>
                 </div>
               </div>
             </div>
