--- a/public/index.html
+++ b/public/index.html
@@ -536,7 +536,8 @@
               <div class="col-lg-6 col-md-7">
                 <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                   <button type="button" class="btn btn-secondary">2025年</button>
-                  <button type="button" class="btn btn-secondary">2024年</button>
+                  <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRFZKFleiS09MRGa-XixLyfFLGDoQKEYgcZADngI7HEy9xa87x8H9YNIEYLBEe5Hw/pubhtml" role="button"
+                    target="_blank">2024年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQRtdBsWnQnUaW6PP84epTpyZAfxcWm_RnIBq237r2ZOit4QVVz78fHohd-QBLBQQ/pubhtml" role="button"
                     target="_blank">2023年</a>
                   <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTYQiR5PrxHP892oNuFbbXPIGj1C3kelErLed2TRPpczSsd6PNdxIRtqq3n5XcUAQ/pubhtml" role="button"
