FC2016 主な戦績の追記。2024年度試合結果リンク追記

--- a/public/index.html
+++ b/public/index.html
@@ -674,6 +674,8 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.04.29] 第8回 中原区長杯 春季低学年サッカー大会 優勝</li>
+                  <li>- [2024.03.30] TADO U7 ステップアップ大会 優勝</li>
                   <li>- [2024.01.28] U-7 ATHLEAD CHALLENGE LEAGUE 準優勝</li>
                   <li>- [2024.01.27] U-7 さぎぬまSC杯 優勝</li>
                   <li>- [2023.07.17] U-7 ラゾクラック杯 優勝</li>
@@ -693,7 +695,9 @@
                   <button type="button" class="btn btn-secondary">2027年</button>
                   <button type="button" class="btn btn-secondary">2026年</button>
                   <button type="button" class="btn btn-secondary">2025年</button>
-                  <button type="button" class="btn btn-secondary">2024年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOaanqmKbsyEGwltB2T1pbNEv5KoA-Or1sFpmpvLtklyQDTYEIvfR-DX8U1Lg1TkRCjox5OKa_kNie/pubhtml?gid=1778863316&single=true"
+                    role="button" target="_blank">2024年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vT90a-fI6P6ZAiRQ2IhLT5HAfP2hsmKp3l1iEU7WbxHhP--7uFWRDIUeLn5WuXgpJr8RMFGl8bf8C_4/pubhtml?gid=0&single=true"
                     role="button" target="_blank">2023年</a>
