--- a/public/index.html
+++ b/public/index.html
@@ -737,7 +737,9 @@
                   <button type="button" class="btn btn-secondary">2027年</button>
                   <button type="button" class="btn btn-secondary">2026年</button>
                   <button type="button" class="btn btn-secondary">2025年</button>
-                  <button type="button" class="btn btn-secondary">2024年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/1WUlBPPg0FieJyUVvapLN8XkKYzsEq4yi/edit#gid=728770359"
+                    role="button" target="_blank">2024年</a>
                 </div>
               </div>
             </div>
