20121戦績追加、画像更新

--- a/public/index.html
+++ b/public/index.html
@@ -447,10 +447,11 @@
           <div class="card-body text-primary">
             <div class="row justify-content-center">
               <div class="col-lg-6 col-md-5 team-photo-box">
-                <img src="images/fc2012_20201025.jpg" alt="Image" class="img-fluid team-photo">
+                <img src="images/fc2012_240505.jpg" alt="Image" class="img-fluid team-photo">
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.05.05] 斎藤旗争奪第46回川崎市春季少年サッカー大会 ブルー：優勝　ホワイト：ベスト32</li>
                   <li>- [2024.02.17] 第15回川崎ケーブルテレビ杯新人戦 ベスト4</li>
                   <li>- [2023.10.14] ハンガリー大使館杯 U-11川崎市秋季サッカー大会2023 3位</li>
                   <li>- [2023.06.25] 第35回八王子いちょう杯 5年生大会 優勝</li>
