FC2015 試合結果へのリンクを追加

--- a/public/index.html
+++ b/public/index.html
@@ -649,7 +649,9 @@
                   <button type="button" class="btn btn-secondary">2027年</button>
                   <button type="button" class="btn btn-secondary">2026年</button>
                   <button type="button" class="btn btn-secondary">2025年</button>
-                  <button type="button" class="btn btn-secondary">2024年</button>
+                  <a class="btn btn-primary"
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=1142856459&single=true"
+                    role="button" target="_blank">2024年</a>
                   <a class="btn btn-primary"
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQml-50awLDy2Yq22UaStZcolrfhVFlPaIyzptU23drQNhz1G2M7ms8Fq7vt5Ujov4MGhnlOraJeJKI/pubhtml?gid=671848106&single=true"
                     role="button" target="_blank">2023年</a>
