お知らせに 6年生斎藤旗優勝を追加

--- a/public/index.html
+++ b/public/index.html
@@ -150,19 +150,23 @@
         </div>
 
         <div class="row justify-content-center">
+
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2024.05.05</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            <a href="#result_6">U-12 (6年生)</a><br>
+            <a href="https://kawasaki-fa.com/u12/2024_saitou_20240505_01/" target="_blank">斎藤旗争奪第46回川崎市春季少年サッカー大会 にて 優勝</a> いたしました。<br>
+            <br>たくさんの応援、誠にありがとうございました。
+            <br>(当日の様子は <a href="https://www.instagram.com/p/C6szRqPB01y/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank">FC中原 Instagram</a> でもご紹介しています)
+          </div>
+
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2024.04.05</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             新年度(2024年度) に対応いたしました。
-          </div>
-
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2023.12.03</h4>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            クラブ方針、指導方針、および、トレーニング目標を公開しました。<br>
-            今後とも、FC中原をよろしくお願いいたします。
           </div>
         </div>
       </div>
