--- a/public/index.html
+++ b/public/index.html
@@ -624,6 +624,7 @@
               </div>
               <div class="col-lg-6 col-md-7">
                 <ul class="list-unstyled mt-3 mb-4">
+                  <li>- [2024.05.05] FC明浜カップ U9大会 準優勝</li>
                   <li>- [2024.02.12] TADOカップ U8サッカー大会 優勝</li>
                   <li>- [2024.02.03] 2024平間カップ 2年生大会 優勝</li>
                   <li>- [2024.01.06-08] U-8 MAMEDO FC CUP 2024(波崎) 準優勝</li>
